# DevAI

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  OPENCODE.md  README.md  agent.md  ai.sh  setup.sh
.ai/: AI_INSTRUCTIONS.md  ARCHITECTURE_AND_DECISIONS.md  CODING_GUIDELINES.md  OPERATIONAL_GUIDELINES.md  PROJECT_CONTEXT.md  PROJECT_MANAGEMENT.md  SECURITY_GUIDELINES.md  TESTING_GUIDELINES.md  TODO.md
.ai/memory/: 20251228_190411.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
.opencode/: config.json
Implementation/: ARCHITECTURE.md  CURRENT_TASK.md  PROJECT_CONTEXT.md  TODO.md
docs/API/: example.rest
services/backend/: pyproject.toml  ruff.toml
services/frontend/: .prettierignore  .prettierrc  eslint.config.js  package.json
